--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="btn"href="#">Buy Now</a>
     </div>
 
-    <div>
+    <div class="img">
       <img class="img-flex"src="images/placeholder-4by3.svg" alt="">
     </div>
   </div>
